--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
-
+    annotationProcessor 'com.google.code.findbugs:jsr305:3.0.2'
 
 
 
