--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/knot_platform?currentSchema=knot_cms&escapeSyntaxCallMode=call
-#spring.datasource.username=teamhash
-#spring.datasource.password=#Hash0901
-
 spring.jpa.open-in-view=true
-#spring.jpa.database=postgresql
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -27,3 +18,6 @@ spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.default_schema=public
 
 spring.thymeleaf.cache=false
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
