--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+file-path=classpath:/resources/
