--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'com.h2database:h2'
-//    implementation 'org.postgresql:postgresql'
+    implementation 'org.postgresql:postgresql'
 
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
