refactor: Extract datasource information to datasource.properties from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,12 @@
 #server.address=8080
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:file:./testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.config.import=optional:classpath:/datasource.properties
+
 
 spring.jpa.open-in-view=true
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -19,4 +14,5 @@ spring.thymeleaf.cache=false
 
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-file-path=classpath:/resources/
+# suppress inspection "SpringBootApplicationProperties"
+com.kalgookso.august.filepath=classpath:/resources/
